--- a/Aula 7/index.html
+++ b/Aula 7/index.html
@@ -14,6 +14,9 @@
           Descubra novos lugares, conheça </br>
           novas culturas, praias paradisíacas, </br>
           comidas, pontos turísticos e muito mais conosco!</br>
+          <strong class="strong2">
+            Voe, viaje, divirta-se! </br>
+          </strong>
           <strong class = "strong"> Aproveite!</strong>
       </p>
     </div>
