--- a/Aula 11/index.html
+++ b/Aula 11/index.html
@@ -8,6 +8,7 @@
     <script src = "script.js"defer></script>
 </head>
 <body>
+    <audio id = "som" src = "celebration.mp3"></audio>
     <h1>Quantos dias faltam?</h1>
     <div class = "conteiner-contador">
         <div class = "contador-elemento contador-dias">
