--- a/Aula 13/resultado.html
+++ b/Aula 13/resultado.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resultado</title>
     <link rel="stylesheet" href="style.css">
+    <script src = "resultado.js" defer></script>
 </head>
 <body>
     <main>
@@ -18,7 +19,7 @@
             </div>
             <div>
                 <label class = "label">Média:</label>
-                <span id="media">10</span>
+                <span id="media">00</span>
             </div>
             <div>
                 <label class = "label">Resultado:</label>
