--- a/Aula 13/index.html
+++ b/Aula 13/index.html
@@ -21,16 +21,16 @@
                     <input type="text" id="nome_input" placeholder="Digite o nome do aluno..." required>
                 </div>
                 <div>
-                    <label for=n1_input">Nota 1</label>
+                    <label for="n1_input">Nota 1</label>
                     <input type="number" id="n1_input" placeholder="Digite uma nota entre 0 e 10" max="10" min="0">
                 </div>
                 <div>
-                    <label for=n2_input">Nota 2</label>
+                    <label for="n2_input">Nota 2</label>
                     <input type="number" id="n2_input" placeholder="Digite uma nota entre 0 e 10" max="10" min="0">
                 </div>
                 <div>
-                    <label for=n3_input">Nota 3</label>
-                    <input type="number" id="n2_input" placeholder="Digite uma nota entre 0 e 10" max="10" min="0">
+                    <label for="n3_input">Nota 3</label>
+                    <input type="number" id="n3_input" placeholder="Digite uma nota entre 0 e 10" max="10" min="0">
                 </div>
                 <div class="conteiner_btn">
                     <button class="submit" type="submit">Enviar</button>
