--- a/Trabalho Final/index.html
+++ b/Trabalho Final/index.html
@@ -8,20 +8,21 @@
     <title>Projeto 1 - Final</title>
 </head>
 <body>
-    <div class= "conteiner-imagem">
+    <main class= "conteiner-imagem">
         <img class="foto" src = "https://img.elo7.com.br/product/zoom/3826699/desenho-digital-de-pessoas-ou-personagens-busto-desenho-estilizado.jpg">
-        <button class="github">Github</button> 
-        <button class="instagram">Instagram</button> 
-        <button class="linkedin">Linkedin</button>
-        <button class="email">E-mail</button> 
-    </div>
+        <div class="conteiner-botoes">
+            <button class="github" type="submit"><img src="img_git.png"></button> 
+            <button class="instagram" type="submit"><img src="img_insta.png"></button> 
+            <button class="email" type="submit"><img src="img_email.png"></button> 
+        </div>
+    </main>
     <div class="conteiner-previa">
         <h1>Gláucia Vasconcelos</h1>
         <h2>Descubra o futuro da programação comigo!</h2>
-        <h4>Sou estudante dedicado da Ctrl+Play! 
-            Tenho o módulo Young 1 (Python) na bagagem e o Young 2 (HTML, CSS e JavaScript) em voo!
-            Estou pronta para aterrissar no Young 3 (PHP e Banco de Dados).
-            Aperte os cintos e se prepare para uma nova viagem de inovação e aprendizado comigo!
+        <h4>Sou estudante da Ctrl+Play! </br> 
+            Tenho o módulo Young 1 (Python) na bagagem </br> e o Young 2 (HTML, CSS e JavaScript) em voo!</br> 
+            Estou pronta para aterrissar no Young 3 (PHP e Banco de Dados). </br> 
+            Aperte os cintos e se prepare para uma nova viagem de inovação e aprendizado comigo! </br>
         </h4>
         <button class="acessar">Acesse outras informações sobre mim</button>
     </div>
