Trabalho final - finalizando...

--- a/Trabalho Final/index.html
+++ b/Trabalho Final/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <main class= "conteiner-imagem">
-        <img class="foto" src = "https://img.elo7.com.br/product/zoom/3826699/desenho-digital-de-pessoas-ou-personagens-busto-desenho-estilizado.jpg">
+        <img class="foto" src = "foto.png">
         <div class="conteiner-botoes">
             <button class="github" type="submit"><img src="img_git.png"></button> 
             <button class="instagram" type="submit"><img src="img_insta.png"></button> 
@@ -17,14 +17,15 @@
         </div>
     </main>
     <div class="conteiner-previa">
-        <h1>Gláucia Vasconcelos</h1>
-        <h2>Descubra o futuro da programação comigo!</h2>
-        <h4>Sou estudante da Ctrl+Play! </br> 
+        <h1 class="titulo">Gláucia Vasconcelos</h1>
+        <h3 class="texto">
+            Descubra o futuro da programação comigo! </br> 
+            Sou estudante da Ctrl+Play! </br> 
             Tenho o módulo Young 1 (Python) na bagagem </br> e o Young 2 (HTML, CSS e JavaScript) em voo!</br> 
             Estou pronta para aterrissar no Young 3 (PHP e Banco de Dados). </br> 
             Aperte os cintos e se prepare para uma nova viagem de inovação e aprendizado comigo! </br>
-        </h4>
-        <button class="acessar">Acesse outras informações sobre mim</button>
+        </h3>
+        <button class="botao">Acesse outras informações sobre mim</button>
     </div>
 </body>
 </html>
