trabalho final - finalizando...

--- a/Trabalho Final/informaçoes.html
+++ b/Trabalho Final/informaçoes.html
@@ -9,13 +9,26 @@
 </head>
 <body>
     <div class="conteiner-informaçoes">
-        <h1 class="pessoais">INFORMAÇÕES PESSOAIS</h1>
-        <h3>Moro na cidade de Itupeva-SP;
-            Toco diversos instrumentos como órgão, piano e teclado;
-            Finalizei diversos projetos de jogos em Python;
-            Fiz diversos sites interativos com HTML, CSS e JAVASCRIPT!
-        </h3>
-        <button class="acessar">Acesse estes sites!</button>
+        <h1 class="titulo">INFORMAÇÕES PESSOAIS</h1>
+        <ul class="texto">
+            <li>
+                Moro na cidade de Itupeva-SP;
+            </li>
+            <li>
+                Tenho 15 anos, estou cursando o Ensino Médio;
+            </li>
+            <li>
+                Toco diversos instrumentos de teclas;
+            </li>
+            <li>
+                Criei projetos de sites interativos com html, css e JavaScript em meu curso na Ctrl+Play!
+            </li>
+            <li>
+                Produzi diversos projetos de jogos em Python; 
+            </li>
+
+        </ul>
+        <button class="acessar">Acesse os meus projetos</button>
     </div>
 </body>
 </html>
