Trabalho final - finalizando...

--- a/Trabalho Final/index.html
+++ b/Trabalho Final/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=>, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
-    <title>Projeto 1 - Final</title>
+    <title>Portifólio</title>
 </head>
 <body>
     <main class= "conteiner-imagem">
@@ -25,7 +25,9 @@
             Estou pronta para aterrissar no Young 3 (PHP e Banco de Dados). </br> 
             Aperte os cintos e se prepare para uma nova viagem de inovação e aprendizado comigo! </br>
         </h3>
-        <button class="botao">Acesse outras informações sobre mim</button>
+        <button class="botao">
+            <a href="informaçoes.html">Acesse outras informações sobre mim!</a>
+        </button>
     </div>
 </body>
 </html>
