--- a/Trabalho Final/informaçoes.html
+++ b/Trabalho Final/informaçoes.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="informaçoes.css">
     <script src = "informações.js" defer></script>
-    <title>Document</title>
+    <title>informações</title>
 </head>
 <body>
     <div class="conteiner-informaçoes">
