Trabalho Final - finalizando...

--- a/Trabalho Final/Informações/informaçoes.html
+++ b/Trabalho Final/Informações/informaçoes.html
@@ -5,30 +5,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="informaçoes.css">
     <script src = "informações.js" defer></script>
-    <title>informações</title>
+    <title>Informações</title>
 </head>
 <body>
     <div class="conteiner-informaçoes">
         <h1 class="titulo">INFORMAÇÕES PESSOAIS</h1>
         <ul class="texto">
-            <li>
+            <li class="lista">
                 Moro na cidade de Itupeva-SP;
             </li>
-            <li>
+            <li class="lista">
                 Tenho 15 anos, estou cursando o Ensino Médio;
             </li>
-            <li>
+            <li class="lista">
                 Toco diversos instrumentos de teclas;
             </li>
-            <li>
+            <li class="lista">
                 Criei projetos de sites interativos com html, css e JavaScript em meu curso na Ctrl+Play!
             </li>
-            <li>
+            <li class="lista">
                 Produzi diversos projetos de jogos em Python; 
             </li>
 
         </ul>
-        <button class="acessar">Acesse os meus projetos</button>
+        <button class="botao">Acesse os meus projetos</button>
     </div>
 </body>
 </html>
