--- a/Trabalho Final/Portifólio 1/index.html
+++ b/Trabalho Final/Portifólio 1/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <main class= "conteiner-imagem">
-        <img class="foto" src = "foto.png">
+        <img class="foto" src = "imagens/foto.png">
         <div class="conteiner-botoes">
-            <button class="github" type="submit"><img src="img_git.png"></button> 
-            <button class="instagram" type="submit"><img src="img_insta.png"></button> 
-            <button class="email" type="submit"><img src="img_email.png"></button> 
+            <button class="github" type="submit"><img src="imagens/img_git.png "></button> 
+            <button class="instagram" type="submit"><img src="imagens/img_insta.png"></button> 
+            <button class="email" type="submit"><img src="imagens/img_email.png"></button> 
         </div>
     </main>
     <div class="conteiner-previa">
@@ -31,9 +31,3 @@
     </div>
 </body>
 </html>
-
-<!-- https://github.com/topics/responsive-cards -->
-<!-- <img src="https://cdn.icon-icons.com/icons2/377/PNG/256/Email_37362.png">
-<img src="https://banner2.cleanpng.com/20180413/ivq/kisspng-linkedin-computer-icons-clip-art-contact-5ad062383ba2f9.2291432915236060722443.jpg">
-<img src="https://img.freepik.com/vetores-gratis/instagram-fundo-em-cores-gradientes_23-2147823814.jpg">
-<img src= "https://miro.medium.com/v2/resize:fit:600/1*p6exlg2Jrl3pimjPy7R-sA.png"> -->
