Trabalho final - finalizando...

--- a/Trabalho Final/informaçoes.html
+++ b/Trabalho Final/informaçoes.html
@@ -11,24 +11,26 @@
     <div class="conteiner-informaçoes">
         <h1 class="titulo">INFORMAÇÕES PESSOAIS</h1>
         <ul class="texto">
-            <li class="lista">
+            <li class="lista1">
                 Moro na cidade de Itupeva-SP;
             </li>
-            <li class="lista">
+            <li class="lista2">
                 Tenho 15 anos, estou cursando o Ensino Médio;
             </li>
-            <li class="lista">
+            <li class="lista3">
                 Toco diversos instrumentos de teclas;
             </li>
-            <li class="lista">
+            <li class="lista4">
                 Criei projetos de sites interativos com html, css e JavaScript em meu curso na Ctrl+Play!
             </li>
-            <li class="lista">
+            <li class="lista5">
                 Produzi diversos projetos de jogos em Python; 
             </li>
 
         </ul>
-        <button class="botao">Acesse os meus projetos</button>
+        <button class="botao">
+            <a href="Aula_10.html">Acesse os meus projetos em HTML</a>
+        </button>
     </div>
 </body>
 </html>
