Trabalho Final - finalizando...

--- a/Trabalho Final/Aula_10/aula10.html
+++ b/Trabalho Final/Aula_10/aula10.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quais são as horas?</title>
-    <link rel="stylesheet" href="Aula_10.css">
-    <script src="Aula_10.js" defer></script>
+    <link rel="stylesheet" href="aula10.css">
+    <script src="aula10.js" defer></script>
 </head>
 <body>
     <div>
@@ -19,10 +19,10 @@
     </div>
     <div class="conteiner-botoes">
         <button class="voltar" type="submit">
-            <a href="informaçoes.html">VOLTAR</a>
+            <a href="../Informações/informaçoes.html">VOLTAR</a>
         </button>
         <button class="avancar" type="submit">
-            <a href="">AVANÇAR</a>
+            <a href="../Aula_16/aula16.html">Avançar</a>
         </button>
     </div>
 </body>
