--- a/Trabalho Final/Informações/informaçoes.html
+++ b/Trabalho Final/Informações/informaçoes.html
@@ -28,8 +28,11 @@
             </li>
 
         </ul>
-        <button class="botao">
-            <a href="Aula_10.html">Acesse os meus projetos em HTML</a>
+        <button class="voltar">
+            <a href="../Portifólio/portifolio.html">Voltar</a>
+        </button>
+        <button class="avancar">
+          <a href="../Aula_10/aula10.html">Acesse os meus projetos!</a>
         </button>
     </div>
 </body>
