--- a/Trabalho Final/Portifólio/portifolio.html
+++ b/Trabalho Final/Portifólio/portifolio.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <main class= "conteiner-imagem">
-        <img class="foto" src = "imagens/foto.png">
+        <img class="foto" src = "../Imagens/foto.png">
         <div class="conteiner-botoes">
-            <button class="github" type="submit"><img src="imagens/img_git.png "></button> 
-            <button class="instagram" type="submit"><img src="imagens/img_insta.png"></button> 
-            <button class="email" type="submit"><img src="imagens/img_email.png"></button> 
+            <button class="github" type="submit"><img src="../Imagens/img_git.png"></button> 
+            <button class="instagram" type="submit"><img src="../Imagens/img_insta.png"></button> 
+            <button class="email" type="submit"><img src="../Imagens/img_email.png"></button> 
         </div>
     </main>
     <div class="conteiner-previa">
@@ -26,7 +26,7 @@
             Aperte os cintos e se prepare para uma nova viagem de inovação e aprendizado comigo! </br>
         </h3>
         <button class="botao">
-            <a href="informaçoes.html">Acesse outras informações sobre mim!</a>
+            <a href="../Informações/informaçoes.html">Acesse outras informações sobre mim!</a>
         </button>
     </div>
 </body>
