--- a/Fontes/Ideias/index.html
+++ b/Fontes/Ideias/index.html
@@ -24,6 +24,11 @@
         <h2 class="embed">Embed</h2>
         <h2 class="rubik">Rubik</h2>
         <h2 class="bumgee">Bungee</h2>
+        <h2 class="poppins">Poppins</h2>
+        <h2 class="inria">Inria</h2>
+    </div>
+    <div class="div3">
+        <h2 class="freckle">Freckle</h2>
     </div>
 
 </body>
