--- a/Exercício Final/index.html
+++ b/Exercício Final/index.html
@@ -11,51 +11,65 @@
 <body>
     <div class="cabecalho">
         <img src="../Exercício Final/Imagens/logo.png" class="logo">
-        <div class="botoes">
-            <a href="">Intro</a>
-            <a href="">Hobbie 1</a>
-            <a href="">Hobbie 2</a>
-        </div>
+        <ul class="botoes" style="list-style: none;">
+            <li>
+                <a href=".sessao">Introdução</a>
+            </li>
+            <li>
+                <a href=".sessao2">Hobbie 1</a>
+            </li>
+            <li>
+                <a href=".sessao">Hobbie 2</a>
+            </li>
+        </ul>
     </div>
 
     <main class="conteudo">
-        <div class="sessao1">
-            <h1>
-                HOBBIES
-            </h1>
-            <p>
-                Olá! Sou Gláucia Vasconcelos, tenho 15 anos e estudante da Ctrl+Play</br>
-                e vim apresentar passatempos que fazem parte da minha rotina</br>
-                quando não estou em momento de aula ou estudos! </br>
-                <h3>Venha conhecê-los comigo!</h3>
-            </p>
-            <img src="../Exercício Final/Imagens/imagemhobbie.jpg">
+        <div class="sessao">
+            <div class="texto">
+                <h1>
+                    HOBBIES
+                </h1>
+                <p>
+                    Olá! Sou Gláucia Vasconcelos, tenho 15 anos e estudante da Ctrl+Play!</br>
+                    Vim apresentar passatempos que fazem parte da minha rotina</br>
+                    quando não estou em momento de aula ou estudos! </br>
+                    <h3>Venha conhecê-los comigo!</h3>
+                </p>
+            </div>
+            <img class="img-intro"  src="../Exercício Final/Imagens/imagemhobbie.jpg">
         </div>
+
         <div class="sessao2">
-            <h1>INSTRUMENTOS</h1>
-            <p>
-                Além dos meus cursos de robótica e programação na Ctrl+Play, </br>
-                tenho um hobby preferido que é a música. </br>
-                Toco instrumentos de teclas, como: Órgão Eletrônico, Piano e Teclado </br>
-                e estou em busca de aprender os instrumentos Violão e Ukulele.
-            </p>
+            <div class="texto2">
+                <h1>INSTRUMENTOS</h1>
+                <p>
+                    Além dos meus cursos de robótica e programação na Ctrl+Play, </br>
+                    tenho um hobby preferido que é a música. </br>
+                    Toco instrumentos de teclas, como: Órgão Eletrônico, Piano e Teclado </br>
+                    e estou em busca de aprender os instrumentos Violão e Ukulele.
+                </p>
+            </div>
             <img src="../Exercício Final/Imagens/instrumentos.jpg">
         </div>
-        <div class="sessao3">
-            <h1>CINEMA</h1>
-            <p>
-                Outro hobbie que faz parte do meu lazer é consumir </br>
-                diversos tipos de arte e um dos principais é o </br>
-                cinema, ou seja, filmes e séries. </br>
-                Assisto filmes e séries de diversas categorias, </br>
-                como: ação, comédia, romance, entre outros.
-            </p>
+
+        <div class="sessao">
+            <div class="texto">
+                <h1>CINEMA</h1>
+                <p>
+                    Outro hobbie que faz parte do meu lazer é consumir </br>
+                    diversos tipos de arte e um dos principais é o </br>
+                    cinema, ou seja, filmes e séries. </br>
+                    Assisto filmes e séries de diversas categorias, </br>
+                    como: ação, comédia, romance, entre outros.
+                </p>
+            </div>
             <img src="../Exercício Final/Imagens/filme.jpg">
         </div>
     </main>
 
     <footer class="rodape">
-        <img src="../Exercício Final/Imagens/logo.png">
+        <img class = "logo1" src="../Exercício Final/Imagens/logo.png">
         <h4>Feito por uma estudante da Ctrl+Play!</h4>
     </footer>
 </body>
