--- a/000/index.html
+++ b/000/index.html
@@ -1,61 +1,47 @@
-<?php
-    include ('../../Conexoes/conexao_sistema.php');
-    session_start ();
-    $id = $_SESSION['id'];
-    $sql_codigo = "SELECT * FROM itens WHERE id ='$id'";
-    $sql_codigo_usuario = "SELECT nome FROM cliente WHERE id='$id'";
-
-    $resultado_nome = $mysqli->query($sql_codigo_usuario);
-    $nome_usuario = $resultado_nome->fetch_assoc();
-
-    $nome = $nome_usuario['nome'];
-    $resultado = $mysqli->query($sql_codigo);
-?>
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Compras</title>
-    <link rel="stylesheet" href="painel.css">
+    <title>ALURAFLIX</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1 class="titulo">
-        Lista de Compras - <?php echo 'Bem-vindo '. $nome;?>
-    </h1>
-    <main class="container">
-        <table>
-            <tr class = "cabecalho">
-                <th>Nome</th>
-                <th>Quantidade</th>
-                <th>Ações</th>
-            </tr>
-            <?php
-                if ($resultado->num_rows >= 1){
-                    while ($item = $resultado->fetch_assoc()){
-                        echo '<tr class = "informacoes">';
-                            echo '<td>'.$item['nome'].'</td>';
-                            echo '<td>'.$item['quantidade'].'</td>';
-                            echo '<td> <a href = "deletar.php?id='.$item['id'].'">Deletar</a> </td>';
-                            echo '<td> <a href = "adicionar.php?id='.$item['id'].'">Adicionar</a> </td>';
-                            echo '<td> <a href = "editar.php?id='.$item['id'].'">Editar</a> </td>';
-                            echo '<td> <a href = "login.php?id='.$item['id'].'">Deslogar</a> </td>';
-                        echo '</tr>';
-                    }
-                }
-            ?>
-            <tr>
-                <td class = "add" colspan = "4">
-                    <?php
-                    echo '<a type "submit" class = "botao_add" href = "adicionar.php">Adicionar</a>';
-                    echo '<a type "submit" class = "botao_add" href = "deletar.php">Deletar</a>';
-                    echo '<a type "submit" class = "botao_add" href = "editar.php">Editar</a>';
-                    echo '<a type "submit" class = "botao_add" href = "editar.php">Deslogar</a>';
-                    ?>
-                </td>
-            </tr>
-        </table>
-    </main>
+    <section class="chamada">
+        <div class="chamada-texto">
+            <header>ALURAFLIX</header>
+            <h1>ATRAVÉS DO ARANHAVERSO SUPERA O PRIMEIRO FILME?</h1>
+            <p>#homem-aranha</p>
+        </div>
+        <div>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/gt_fAE1Eg2Q?si=B-CBq0lciLLiXH9b" 
+            title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; 
+            encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" 
+            allowfullscreen></iframe>
+        </div>
+    </section>
+    <section class="categoria">
+        <h2>Filmes e séries</h2>
+            <div class="categoria-videos">
+                <a href="https://www.youtube.com/watch?v=cs15QqG6Gjc">
+                  <img src="https://img.youtube.com/vi/cs15QqG6Gjc/maxresdefault.jpg" />
+                </a>
+                <a href="https://www.youtube.com/watch?v=nCmIwcycUJ8">
+                  <img src="https://img.youtube.com/vi/nCmIwcycUJ8/maxresdefault.jpg" />
+                </a>
+                <a href="https://www.youtube.com/watch?v=FvRmEapoHRc">
+                  <img src="https://img.youtube.com/vi/FvRmEapoHRc/maxresdefault.jpg" />
+                </a>
+                <a href="https://www.youtube.com/watch?v=Ipkw_hWW-Hw">
+                  <img src="https://img.youtube.com/vi/Ipkw_hWW-Hw/maxresdefault.jpg" />
+                </a>
+                <a href="https://www.youtube.com/watch?v=d4DzMNGoyis">
+                  <img src="https://img.youtube.com/vi/d4DzMNGoyis/maxresdefault.jpg" />
+                </a>
+            </div>
+    </section>
+  
+  <!-- código omitido -->
+  
 </body>
 </html>
