--- a/000/index.html
+++ b/000/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fornecedores - Vendas</title>
     <link rel="stylesheet" href="../../CSS/fornecedores.css">
+    <script src="script.js"></script>
 </head>
 <body>
     <main>
